Test Org - Speridian/src/objects/BA_Asset__c.object
<CustomObject>
    <fields>
        <fullName>ba_BenefitPackage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Predefined Packages</label>
        <referenceTo>BA_Product_Flat__c</referenceTo>
        <relationshipLabel>Benefit Package</relationshipLabel>
        <relationshipName>Benefit_Package</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_GroupNumber__c</fullName>
        <label>Group Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Benefit Package</relationshipLabel>
        <relationshipName>Benefit_Package</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Benefit Package</relationshipLabel>
        <relationshipName>Benefit_Package</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_Network__c</fullName>
        <label>Network</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_PolicyEffectiveDate__c</fullName>
        <label>Policy Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_PolicyTerminationDate__c</fullName>
        <label>Policy Termination Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_QuoteLineID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Quote Line</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Benefit Package</relationshipLabel>
        <relationshipName>Benefit_Package</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_RateEffectiveDate__c</fullName>
        <label>Rate Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_RateTerminationDate__c</fullName>
        <label>Rate Termination Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ba_RatingRegion__c</fullName>
        <label>Rating Region</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_Tier__c</fullName>
        <label>Tier</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_TransactionSubtype__c</fullName>
        <label>Transaction Subtype</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_TransactionType__c</fullName>
        <label>Transaction Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group Asset</fullName>
                </value>
                <value>
                    <fullName>Member Asset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Benefit Package</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Benefit Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefit Package</pluralLabel>
    <recordTypes>
        <fullName>BA_Subgroup_Asset</fullName>
        <active>true</active>
        <label>Subgroup Benefit Package</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>